[package]
name = "report-events-api"
version = "0.1.0"
authors = ["Evan Duncan <evan.duncan@greenhouse.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
env_logger = "0.8.3"
influx_db_client = "^0.5.0"
tokio = { version = "1", features = ["full"] }
